<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory 
     android:title="@string/autosave_settings"
     android:key="pref_autosave_settings">
    <CheckBoxPreference
       android:key="pref_save_on_destroy"
       android:title="@string/save_on_destroy"
       android:summary="@string/save_on_destroy_summ"
       android:defaultValue="true" />
    <CheckBoxPreference
       android:key="pref_save_on_stop"
       android:title="@string/save_on_stop"
       android:summary="@string/save_on_stop_summ"
       android:defaultValue="false" />
  </PreferenceCategory>
  <PreferenceCategory 
     android:title="@string/ui_settings"
     android:key="pref_ui_settings">
    <CheckBoxPreference
       android:key="pref_use_stylus"
       android:title="@string/use_stylus"
       android:summary="@string/use_stylus_summ"
       android:defaultValue="false" />
    <CheckBoxPreference
       android:key="pref_smart_text_selection"
       android:title="@string/use_smart_text_selection"
       android:summary="@string/use_smart_text_selection_summ"
       android:defaultValue="false" />
	<EditTextPreference
       android:key="pref_number_recent_files"
       android:title="@string/number_recent_files"
       android:summary="@string/number_recent_files_summ"
       android:numeric="integer"
       android:digits="0123456789"
       android:defaultValue="@string/number_recent_files_default" />
  </PreferenceCategory>
  <PreferenceCategory 
     android:title="@string/display_settings"
     android:key="display_settings">
    <CheckBoxPreference
       android:key="keep_screen_on"
       android:title="@string/keep_screen_on"
       android:summary="@string/keep_screen_on_summ"
       android:defaultValue="true" />
    <CheckBoxPreference
       android:key="pref_fit_width"
       android:title="@string/fit_width"
       android:summary="@string/fit_width_summ"
       android:defaultValue="true" />
	    <ListPreference
	       android:key="pref_reader_scroll_mode"
	       android:title="@string/reader_scroll_mode"
	       android:summary="@string/reader_scroll_mode_summ"
	       android:entries="@array/reader_scroll_mode_entries"
	       android:entryValues="@array/reader_scroll_mode_values"
	       android:negativeButtonText=""
	       android:defaultValue="continuous" />
	    <ListPreference
	       android:key="pref_page_paging_axis"
	       android:title="@string/page_swipe_direction"
	       android:summary="@string/page_swipe_direction_summ"
	       android:entries="@array/page_swipe_direction_entries"
	       android:entryValues="@array/page_swipe_direction_values"
	       android:negativeButtonText=""
	       android:defaultValue="vertical" />
    <!--      <CheckBoxPreference
	      android:key="pref_scroll_vertical"
	      android:title="@string/scroll_vertical"
	      android:summary="@string/scroll_vertical_summ"
	      android:defaultValue="false" />
	      <CheckBoxPreference
		 android:key="pref_scroll_continuous"
		 android:title="@string/scroll_continuous"
		 android:summary="@string/scroll_continuous_summ"
		 android:defaultValue="false" />-->
  </PreferenceCategory>
	  <PreferenceCategory
	     android:title="@string/assistant_settings"
	     android:key="pref_assistant_settings">
	    <Preference
	       android:key="pref_assistant_cartesia_api_key"
	       android:title="@string/assistant_cartesia_api_key_title"
	       android:summary="@string/assistant_cartesia_api_key_summary_unset" />
	    <Preference
	       android:key="pref_assistant_voice_assistant"
	       android:title="@string/assistant_voice_assistant_title"
	       android:summary="@string/assistant_voice_assistant_summary" />
	  </PreferenceCategory>
  <!-- Tool settings live in the document toolbar / tool flows to avoid buried duplicates. -->
  <!--    <ListPreference
	  android:key="pref_test_list_preference"
	  android:title="Test"
	  android:summary="Test summary" />-->
  <PreferenceScreen
     android:key="pref_about_screen"
     android:title="@string/about_title"
     android:summary="@string/about_summary">
    <Preference
       android:key="pref_about_version"
       android:title="@string/about_version_title"
       android:selectable="false"
       android:enabled="false" />
    <Preference
       android:key="pref_about_license"
       android:title="@string/about_license_title"
       android:summary="@string/about_license_summary" />
    <Preference
       android:key="pref_about_source"
       android:title="@string/about_source_title"
       android:summary="@string/about_source_summary" />
    <Preference
       android:key="pref_about_issues"
       android:title="@string/about_issues_title"
       android:summary="@string/about_issues_summary" />
  </PreferenceScreen>
  <PreferenceCategory 
     android:title="@string/experimental_mode_settings"
     android:key="pref_experimental_mode_settings">
    <CheckBoxPreference
       android:key="pref_experimental_mode"
       android:title="@string/experimental_mode"
       android:summary="@string/experimental_mode_summ"
       android:defaultValue="false" />
  </PreferenceCategory>    
</PreferenceScreen>
